# Ruijie-ePorta-Tool

./: .gitignore  README.md  Windows-Ruijie.spec  build.bat  config.json  default_config.json  main.py  main.spec  pyproject.toml  requirements.txt  rwjson.py  version.txt
src/: __main__.py  config.py  main.py  network_manager.py  rwjson.py
