[tool.poetry]
name = "src"
version = "1.6"
description = "一个基于Python的自动登录/断开锐捷eporta网页认证的工具（可开关功能，理论支持大部分学校）"
authors = ["Redlnn <w731347477@gmail.com>"]
readme = "README.md"
license = "AGPL-3.0 only"
repository = "https://github.com/Redlnn/Ruijie-ePorta-Tool"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pywin32 = "^305"
tinywintoast = {git = "https://github.com/Redlnn/tinyWinToast.git"}
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
black = ">=22.12.0"
flake8 = ">=6.0.0"
isort = {extras = ["requirements_deprecated_finder"], version = ">=5.11.4"}
pyinstaller = ">=5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tuna-tsinghua"
default = false
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.black]
line-length = 120
target-version = ["py39", "py310"]
skip-string-normalization = true
safe = true

[tool.isort]
profile = "black"
